--- a/_posts/2016-05-14-yoga1.md
+++ b/_posts/2016-05-14-yoga1.md
@@ -15,7 +15,7 @@ Skim for the sections that seem relevant to you.
 <img src="/assets/om.png" alt="om" style="float: left;margin: 40px;">
 
 
-A lot of people are skeptical of yoga, and the stigma associated with it is unfortunately well deserved. The showing off on Instagram, the cultural misappropriation... there are several issues with the way in which yoga has been popularized. If these things about yoga annoy you, that's ok.
+A lot of people are skeptical of yoga, and the stigma associated with it is unfortunately well deserved. The showing off on Instagram, the cultural appropriation... there are several issues with the way in which yoga has been popularized. If these things about yoga annoy you, that's ok.
 Despite this, everyone can benefit from yoga by building a practice which suits their needs;
 whether that's health, exercise, meditation, or relaxation.
 
