end of start of website

--- a/_posts/2017-12-03-site.md
+++ b/_posts/2017-12-03-site.md
@@ -1,6 +1,10 @@
 ---
-news: true
+news: false
 ---
+
+{% comment %}
+change false to true when you want these to show up 
+{% endcomment %}
 
 
 hello
