fixed typo in aztec bib

--- a/_bib/2017-05-23-aztec-diamonds.bib
+++ b/_bib/2017-05-23-aztec-diamonds.bib
@@ -7,7 +7,7 @@ authors:
   - Xue
 
 extra:
-venue: Involve, a Journal of Mathematica
+venue: Involve, a Journal of Mathematics
 link: https://msp.org/involve/2017/10-5/p01.xhtml 
 
 links:
