Updated CV with Anna's project

--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -97,7 +97,6 @@ College and University Honors\\
 3.78/4.0\\
 
 
-
 \bigskip
 
 %\vspace{2mm}
@@ -109,22 +108,23 @@ College and University Honors\\
 \smallskip
 	\begin{achievements}
 		\item Constructing an approximation algorithm for the Santa Claus problem, a 
-		variant of the classic NP-hard jobs/machines scheduling problem
-	\end{achievements}
-	
-	
-\employer{Healthcare and Mechanism Design }{June 2017 - present} {Anna Karlin: UW}
+		variant of the classic NP-complete jobs/machines scheduling problem
+		\item Primarily using techniques from matroid optimization and graph theory
+	\end{achievements}	
+\bigskip	
+
+
+ \header{Past Projects}
+ \bigskip
+
+\employer{Mechanism Design: Healthcare \& the FedEx Problem }{June 2017 - October 2017} {Anna Karlin: UW}
 \smallskip	
 \begin{achievements}
-		\item Examining economists' work in adverse and advantageous selection settings to understand the
-		issues arising in healthcare allocation
-		\item Tackling the challenges of the healthcare allocation problem using mechanism design
+		\item Examined economists' work in adverse and advantageous selection settings to understand the
+		issues arising in healthcare allocation from the perspective of mechanism design 
+		\item Designed and proved results for a deterministic algorithm for the FedEx problem, which seeks to design a pricing system for package deliveries
 	\end{achievements}
 \bigskip
-
-\header{Past Projects}
-\bigskip
-
 
 \employer{Planted Clique}{October 2015 - June 2016} {Lev Reyzin: UIC}
 \smallskip
@@ -144,7 +144,7 @@ College and University Honors\\
 \bigskip
 
 
-\employer{Examining Euler Equations }{June 2014 - August 2014} {Johnny Guzman: Brown University, Gopal Yalla: UT Austin}
+\employer{Examining Euler Equations }{June 2014 - August 2014} {Johnny Guzman: Brown University}
 \smallskip
 
 	\begin{achievements}
