--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -141,8 +141,8 @@ College and University Honors\\
 		\item Implemented algorithms that find knight's tours on small Aztec diamonds
 		\item Proved traditional inductive arguments for knight's tours fail for Aztec diamonds
 	\end{achievements}
-\bigskip
 
+\clearpage
 
 \employer{Examining Euler Equations }{June 2014 - August 2014} {Johnny Guzman: Brown University}
 \smallskip
@@ -153,8 +153,8 @@ College and University Honors\\
 	model vorticity equation 
 	%in search of determining whether solutions to the three dimension Euler Equations exist globally
 	\end{achievements}
+\bigskip
 
-\clearpage
 \employer{Binomial Coefficients with the Bhargava Factorial}{June 2013 - August 2013}{Gregory Johnson: CMU}
 \smallskip
 
@@ -162,8 +162,8 @@ College and University Honors\\
 	\item Research was performed during the 2013 Summer Undergraduate Applied Mathematics Institute at CMU
 	\item Discovered properties in binomial coefficients produced using the factorial defined by 
 	Manjul Bhargava over geometric progressions
-	\item Studied signal processing and mathematical software with a group of 14 other 
-	mathematics students		
+	%\item Studied signal processing and mathematical software with a group of 14 other 
+	%mathematics students		
 	\end{achievements}
 \bigskip
 
@@ -184,7 +184,7 @@ College and University Honors\\
 \textbf{Craig McKibben and Sarah Merner Endowed Fellowship in Mathematics:  UW}\\
 September 2017\\
 \smallskip
-Awarded by the math department to two students who were exceptional in their preliminary exams 
+Awarded to two students who were exceptional in their preliminary exams 
 and first year courses\\
 \bigskip
 
@@ -207,11 +207,11 @@ One of 40 students honored for making significant contributions to CMU's communi
 July 2014\\
 \smallskip
 The Leadership Alliance selects talented undergraduates from underrepresented groups with the aim to
-provide them mentorship and resources to becoming leaders in academia, business, and the public sector. 
+provide them mentorship and resources to becoming leaders in academia and industry. 
 \bigskip
 
 
-
+\clearpage
 \header{Teaching}
 
 \begin{center}
@@ -242,7 +242,7 @@ provide them mentorship and resources to becoming leaders in academia, business,
 % 2014 Leadership Alliance National Symposium. Stamford, CT
 %\end{achievements}
 
-\clearpage
+
 
 
 \header{Volunteer and Leadership Experience}
