--- a/_posts/2018-06-01-Santa.md
+++ b/_posts/2018-06-01-Santa.md
@@ -7,5 +7,5 @@ categories: post
 research: true
 ---
 
-Given a set of presents and a set of children who each desire some subset of presents: how should Santa distribute presents among the kids in order to maximize the minimum happiness of any child? Our goal is to design an approximation algorithm which not only gives a better constant factor approximation than the best known, but which also compares to an LP smaller than those in all previous work.
-Ongoing work with Thomas Rothvoss and Yihao Zhang.
+Given a set of presents and a set of children who each desire some subset of presents: how should Santa distribute presents among the kids in order to maximize the minimum happiness of any child? We design an approximation algorithm which not only gives a better constant factor approximation than the best known, but which also compares to an LP smaller than those in all previous work.
+Joint work with Thomas Rothvoss and Yihao Zhang.
