--- a/_posts/2017-08-23-FEPPS.md
+++ b/_posts/2017-08-23-FEPPS.md
@@ -5,4 +5,4 @@ date:   2017-10-07
 categories: post
 news: true
 ---
-Today I start volunteering with the incredible program [FEPPS](http://www.fepps.org), the Freedom Education Project for the Puget Sound. I'll be at the Washinton Corrections Center for Women on  Saturday mornings to tutor in study halls for women enrolled in FEPPS's math courses.
+Today I start volunteering with [FEPPS](http://www.fepps.org), the Freedom Education Project for the Puget Sound. I'll be at the Washinton Corrections Center for Women on Saturday mornings to tutor in study halls for women enrolled in FEPPS's math courses.
